syntax = "proto3";
package eventstore;

// protoc --gofast_out=. event.proto

message EventMsg {
  string eventID = 1;
  string eventType = 2;
  string aggregateID = 3;
  string aggregateType = 4;
  string partitionKey = 5;  // Unique ID number for this person.
  string hashKey = 6;  // Unique ID number for this person.
  bytes data = 7;
  int64 time = 8;
  int64 seq = 9;
  int64 timeSeq = 10;
  string userID = 11;
}
